# mcp-zotero

./: .env.example  .gitignore  Dockerfile  README.md  mcp_config_example.json  package.json  pyproject.toml  setup.py  smithery.yaml  tsconfig.json
src/: server.py  server.ts
src/types/: __init__.py  zotero-api-client.d.ts  zotero-types.ts  zotero_types.py
